<resources>
    <string name="app_name">Taxi Ride</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="enable_gps">Enable GPS to fetch location.</string>
    <string name="check_location_services">Location Services Disabled</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="can_not_able_find_location">Cannot find your location!</string>
    <string name="permission_required">Permission required to access your location.</string>
    <string name="gps_required">Enable GPS(Required)</string>
    <string name="your_current_location">Your current location</string>
    <string name="enter_pickup_location">Enter Pickup Location</string>
    <string name="enter_destination">Enter Your Destination</string>
    <string name="set_pick_up">Set Pickup</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="estimate_fare">Fare Estimate</string>
    <string name="book_uber">Book Uber</string>
    <string name="estimate_time">Trip Duration</string>
    <string name="can_not_find_coordinates">Cannot find the Location entered</string>
    <string name="server_error">Cannot find estimate price.</string>
    <string name="server_not_responding">Server Not Responding</string>
    <string name="not_found_time">Cannot find the estimated time</string>
    <string name="not_found_fare">Cannot find the estimated fare</string>
    <string name="current_location">Current Location</string>
    <string name="Error_occurred_during_authentication">Error occurred during authentication</string>
    <string name="Error_occurred_in_the_Ride_Request_Widget">Error occurred in the Ride Request Widget</string>
    <string name="background_image">Background Image for the Splash Activity</string>
    <string name="logo_of_the_app">Logo of the App</string>
    <string name="minutes">Minutes</string>
</resources>
