<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
                xmlns:uber="http://schemas.android.com/apk/res-auto">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.gill.taxiride.MapsActivity" />

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:animateLayoutChanges="true"
        android:background="@drawable/custom_layout_bg"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/pickup_location"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center_vertical"
                android:hint="@string/enter_pickup_location"
                android:inputType="text"
                android:padding="@dimen/_5sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/colorPrimary"
                android:textSize="@dimen/_15sdp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/destination_location"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center_vertical"
                android:hint="@string/enter_destination"
                android:inputType="text"
                android:padding="@dimen/_5sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/colorPrimary"
                android:textSize="@dimen/_15sdp"
                android:visibility="gone" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_5sdp"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/pickup_horizontal_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/_2sdp"
                android:layout_weight="1"
                android:background="@drawable/custom_green_bg"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pickup_time"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/pickup_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/set_pickup"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_weight="1"
                android:background="@drawable/custom_grey_bg"
                android:gravity="center"
                android:text="@string/set_pick_up"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rideRequest_vertical_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:orientation="horizontal"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_green_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/estimate_fare"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/fare_estimate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_green_bg"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/estimate_time"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/trip_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <com.uber.sdk.android.rides.RideRequestButton
                android:id="@+id/ride_request_buton"
                uber:ub__style="black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="visible"
                android:layout_marginTop="@dimen/_5sdp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
